Moved media to media folder

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -64,7 +64,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="about-dynamic-card" style="margin-left:25px">
       <div class="about-dynamic-card-inner">
         <div class="about-dynamic-card-front">
-          <div class="right-image" style="background-image: url('/assets/developer.jpg');background-position: left;background-size: cover;">
+          <div class="right-image" style="background-image: url('/media/developer.jpg');background-position: left;background-size: cover;">
           </div>
           <div class="left-text" style="background-position: center;background-size: cover;">
             <h1>Experience</h1>
@@ -82,14 +82,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="about-dynamic-card-back">
-          <div class="left-image" style="background-image: url('/assets/gus.jpg');background-position: center;background-size: cover;">
+          <div class="left-image" style="background-image: url('/media/northern-lights.jpg');background-position: center;background-size: cover;">
           </div>
-          <div class="right-text" style="background-position: center;background-size: cover;">
-            <h1>Maried and Dogs</h1>
-            <h3>Got wife and dogs</h3>
-            <h3>balh blhal bhalsdjfeifjaiojapiovjaije efjeiadj vidjf eiaj vidjfeaf feafvvaefefaeffv</h3>
-            <h3>asdf vjdf eijaf vija ifje fkajlfl vjifjeoajlijeif q fjdfiajefjdfj adijdij</h3>
-            <h3>fdufiedjv iwjef dfjcvijdf wjfjd ejf ief jd dfije fwiejf vjv vjdiwejfpq jdfjd fv</h3>
+          <div class="right-text" style="background-position: center;background-size: cover;padding: 200px 0">
+            <h1>Travel</h1>
+            <h3>- From roadtrips through Utah's national parks to climbing though ice caves in Iceland, seeing the world is one of me & my family's favorite thing to do</h3>
+            <h3>- Every place we visit brings a new perspective and amazing new experiences</h3>
+            <h3>- I took the image on the left in Akureyri, Iceland in September!</h3>
           </div>
         </div>
       </div>
@@ -98,7 +97,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="about-dynamic-card" style="margin-left:25px">
       <div class="about-dynamic-card-inner">
         <div class="about-dynamic-card-front">
-          <div class="left-image" style="background-image: url('/assets/terminal.png');background-position: left;background-size: cover;">
+          <div class="left-image" style="background-image: url('/media/terminal.png');background-position: left;background-size: cover;">
           </div>
           <div class="right-text" style="background-position: center;background-size: cover;">
             <h1>My Roles</h1>
@@ -113,14 +112,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="about-dynamic-card-back">
-          <div class="right-image" style="background-image: url('/assets/benji.jpg');background-position: center;background-size: cover;">
+          <div class="right-image" style="background-image: url('/media/benji.jpg');background-position: center;background-size: cover;">
           </div>
-          <div class="left-text" style="background-position: center;background-size: cover;">
-            <h1>Maried and Dogs</h1>
-            <h3>Got wife and dogs</h3>
-            <h3>balh blhal bhalsdjfeifjaiojapiovjaije efjeiadj vidjf eiaj vidjfeaf feafvvaefefaeffv</h3>
-            <h3>asdf vjdf eijaf vija ifje fkajlfl vjifjeoajlijeif q fjdfiajefjdfj adijdij</h3>
-            <h3>fdufiedjv iwjef dfjcvijdf wjfjd ejf ief jd dfije fwiejf vjv vjdiwejfpq jdfjd fv</h3>
+          <div class="left-text" style="background-position: center;background-size: cover;padding: 200px 0">
+            <h1>Family</h1>
+            <h3>- My wife and two dogs</h3>
           </div>
         </div>
       </div>
@@ -129,7 +125,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="about-dynamic-card" style="margin-left:25px">
       <div class="about-dynamic-card-inner">
         <div class="about-dynamic-card-front">
-          <div class="right-image" style="background-image: url('/assets/company.jpg');background-position: left;background-size: cover;">
+          <div class="right-image" style="background-image: url('/media/company.jpg');background-position: left;background-size: cover;">
           </div>
           <div class="left-text" style="background-position: center;background-size: cover;">
             <h1>What am I looking for?</h1>
@@ -146,9 +142,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="about-dynamic-card-back">
-          <div class="left-image" style="background-image: url('/assets/northern-lights.jpg');background-position: center;background-size: cover;">
+          <div class="left-image" style="background-image: url('/media/northern-lights.jpg');background-position: center;background-size: cover;">
           </div>
-          <div class="right-text" style="background-position: center;background-size: cover;">
+          <div class="right-text" style="background-position: center;background-size: cover;padding: 200px 0">
             <h1>Maried and Dogs</h1>
             <h3>Got wife and dogs</h3>
             <h3>balh blhal bhalsdjfeifjaiojapiovjaije efjeiadj vidjf eiaj vidjfeaf feafvvaefefaeffv</h3>
@@ -162,7 +158,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="about-dynamic-card" style="margin-left:25px">
       <div class="about-dynamic-card-inner">
         <div class="about-dynamic-card-front">
-          <div class="left-image" style="background-image: url('/assets/northern-lights.jpg');background-position: left;background-size: cover;">
+          <div class="left-image" style="background-image: url('/media/northern-lights.jpg');background-position: left;background-size: cover;">
           </div>
           <div class="right-text" style="background-position: center;background-size: cover;">
             <h1>What are you looking for?</h1>
@@ -180,14 +176,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="about-dynamic-card-back">
-          <div class="right-image" style="background-image: url('/assets/music.jpg');background-position: center;background-size: cover;">
+          <div class="right-image" style="background-image: url('/media/music.jpg');background-position: center;background-size: cover;">
           </div>
-          <div class="left-text" style="background-position: center;background-size: cover;">
-            <h1>Maried and Dogs</h1>
-            <h3>Got wife and dogs</h3>
-            <h3>balh blhal bhalsdjfeifjaiojapiovjaije efjeiadj vidjf eiaj vidjfeaf feafvvaefefaeffv</h3>
-            <h3>asdf vjdf eijaf vija ifje fkajlfl vjifjeoajlijeif q fjdfiajefjdfj adijdij</h3>
-            <h3>fdufiedjv iwjef dfjcvijdf wjfjd ejf ief jd dfije fwiejf vjv vjdiwejfpq jdfjd fv</h3>
+          <div class="left-text" style="background-position: center;background-size: cover;padding: 200px 0">
+            <h1>Hobbies</h1>
+            <h3>- Music is a large part of my life</h3>
+            <h3>- Piano, guitar</h3>
+            <h3>- Self hosting</h3>
+            <h3>- </h3>
           </div>
         </div>
       </div>
