--- a/html/home.html
+++ b/html/home.html
@@ -51,7 +51,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   
 
   <!-- The Grid -->
-  <div  style="margin-top: 75px;height: 1000px;background-image: url('/assets/welcome_photo.jpg');background-position: center;background-size: cover;">
+  <div  style="margin-top: 75px;height: 1000px;background-image: url('/media/welcome_photo.jpg');background-position: center;background-size: cover;">
 
     <div class="w3-container custom-text-body" style="height: 100px;background-color: rgba(38, 38, 38, .75);background-blend-mode: lighten;">
       <h1 class="w3-text-pink">Rhys Bratti</h1>
