--- a/html/about-site.html
+++ b/html/about-site.html
@@ -59,7 +59,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 
     <div class="w3-container w3-card custom-card-background w3-margin-bottom" style="padding-bottom: 25px;">
-        <img  src="../assets/docker.png" style="width:33.33%;right: 200px;position: absolute;margin-top: 15px;">
+        <img  src="../media/docker.png" style="width:33.33%;right: 200px;position: absolute;margin-top: 15px;">
         <div class="w3-container custom-text-body" style="text-align: Left;">
             <h2 class="w3-text-pink">Golang Web App</h2>
             <br>
@@ -79,7 +79,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
 
     <div class="w3-container w3-card custom-card-background w3-margin-bottom" style="padding-bottom: 25px;">
-        <img  src="../assets/nginx.png" style="width:33.33%;right: 200px;position: absolute">
+        <img  src="../media/nginx.png" style="width:33.33%;right: 200px;position: absolute">
         <div class="w3-container custom-text-body" style="text-align: Left;">
             <h2 class="w3-text-pink">Hosting</h2>
             <br>
@@ -102,7 +102,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
 
     <div class="w3-container w3-card custom-card-background w3-margin-bottom" style="padding-bottom: 25px;">
-        <img  src="../assets/linux.png" style="width:33.33%;right: 200px;margin-top: 25px;position: absolute">
+        <img  src="../media/linux.png" style="width:33.33%;right: 200px;margin-top: 25px;position: absolute">
         <div class="w3-container custom-text-body" style="text-align: Left;">
             <h2 class="w3-text-pink">Server</h2>
             <br>
