--- a/html/resume.html
+++ b/html/resume.html
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="custom-card-background custom-text-body w3-card-4" style="margin-top:100px">
         <div class="w3-display-container">
-          <img src="../assets/resume_picture.jpg" style="width:100%" alt="Avatar">
+          <img src="../media/resume_picture.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container custom-card-background">
             <h2 class="custom-text-body">Rhys Bratti</h2>
           </div>
