Added Github link

--- a/html/about-site.html
+++ b/html/about-site.html
@@ -75,6 +75,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5>- Golang webserver hosted in docker container</h5>
             <h5>- Other services, such as Authelia and Nginx Proxy Manager, also hosted in separate Docker containers</h5>
             <h5>- Portainer running to more easily manage multiple containers</h5>
+            <a class="medium-text" href="https://github.com/rhysbratti/resume-server" target="_blank">Check out this project on GitHub!</a>
         </div>
     </div>
 
