About-me refactoring

--- a/html/home.html
+++ b/html/home.html
@@ -80,10 +80,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="custom-dynamic-card-back">
             <div style="padding: 30px;margin-top: 50px;">
-              <h5>Software Engineer with 5 years enterprise experience.</h5> 
-              <h5>Utilizes programming skills and creative problems solving abilities to provide efficient solutions to complex problems.</h5>
-              <h5>Quick learner with a passionate drive to support and assist on team-oriented projects. </h5>
-              <h5>Leverages industry experience, educational background, and motivation to exceed team goals and company expectations.</h5>
+              <h5>Hi there!</h5> 
+              <h5>I'm a software engineer with 5 years industry experience</h5>
+              <h5>I excel at using creative problem solving to provide efficient solutions to complex problems.</h5>
+              <h5>I pride myself with being a quick learner, able to adapt to new technologies in a team oriented environment.</h5>
+              <h5>Leveraging my industry experience along with my unique set of skills helps me exceed company expectations.</h5>
               <a class="medium-text" href="/about-me">Learn more about me and what I'm looking for</a>
             </div>
           </div>
