--- a/html/about-me.html
+++ b/html/about-me.html
@@ -76,19 +76,25 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h4>- Starting in January of 2019 at The Hartford insurance company, I know what it takes to thrive in an enterprise environment</h4>
             <h3><span class="w3-text-pink">4 years</span> of experience developing RESTful APIs</h3>
             <h4>- Migrated The Hartford's PolicyCenter SOAP services to RESTful services</h4>
-            <h4>- All of my time at Booz Allen has been spent on the API project, developing and improving their RESTful APIs</h4>
+            <h4>- At Booz Allen, my focus has been on developing and improving a suite of RESTful APIs for the Department of Veteran's Affairs</h4>
             <h3><span class="w3-text-pink">2 years</span> of experience developing with Sprint Boot</h3>
-            <h4>- My team oversees four RESTful APIS, all written with Spring Boot & integrated with Swagger</h4>
+            <h4>- My team oversees several different APIs, all written with Spring Boot & integrated with Swagger</h4>
           </div>
         </div>
         <div class="about-dynamic-card-back">
           <div class="left-image" style="background-image: url('/media/northern-lights.jpg');background-position: center;background-size: cover;">
           </div>
-          <div class="right-text" style="background-position: center;background-size: cover;padding: 200px 0">
-            <h1>Travel</h1>
-            <h3>- From roadtrips through Utah's national parks to climbing though ice caves in Iceland, seeing the world is one of me & my family's favorite thing to do</h3>
-            <h3>- Every place we visit brings a new perspective and amazing new experiences</h3>
-            <h3>- I took the image on the left in Akureyri, Iceland in September!</h3>
+          <div class="right-text" style="background-position: center;background-size: cover;">
+            <h1>What got me started</h1>
+            <h3><span class="w3-text-pink">How things work</span></h3>
+            <h4>- I've always had an interest in how things work.</h4>
+            <h4>- I've been called a "Tinkerer", and I have to say its an accurate nickname.</h4>
+            <h3><span class="w3-text-pink">Problem Solving</span></h3>
+            <h4>- A fascination with technology alongside a propensity for problem solving, IT was a natural place for me.</h4>
+            <h4>- Whether its fixing a deployment bug or trying to get a new feature to work, I get a lot of joy from figuring things out.</h4>
+            <h3><span class="w3-text-pink">From class to career</span></h3>
+            <h4>- After some self-taught fumbling, I took the first programming course that came my way.</h4>
+            <h4>- Since then, I have found myself in a rare situation: with a career that I am both good at <b>and</b> find interesting!</h4>
           </div>
         </div>
       </div>
@@ -100,7 +106,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="left-image" style="background-image: url('/media/terminal.png');background-position: left;background-size: cover;">
           </div>
           <div class="right-text" style="background-position: center;background-size: cover;">
-            <h1>My Roles</h1>
+            <h1>My responsibilities</h1>
             <h3><span class="w3-text-pink">Implementation</span></h3>
             <h4>- When it comes to handling large scale refactoring, re-architecture, or new feature implementation, I'm the go-to member of my team</h4>
             <h3><span class="w3-text-pink">Test Driven Development</span></h3>
@@ -108,16 +114,23 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h3><span class="w3-text-pink">Automation</span></h3>
             <h4>- Bash scripts, CRON jobs, and occasionaly python: I am awlays looking for ways to automate & improve our day to day processes</h4>
             <h3><span class="w3-text-pink">Integration</span></h3>
-            <h4>- Collaborating with other teams to design integration plans is one of the more interesting parts of my job</h4>
+            <h4>- Collaborating with other teams to design itegrations between platforms is at the core of my responsibilities</h4>
           </div>
         </div>
         <div class="about-dynamic-card-back">
           <div class="right-image" style="background-image: url('/media/benji.jpg');background-position: center;background-size: cover;">
           </div>
-          <div class="left-text" style="background-position: center;background-size: cover;padding: 200px 0">
-            <h1>Family</h1>
-            <h3>- My wife and two dogs</h3>
-            <h3>- Benji and Gus</h3>
+          <div class="left-text" style="background-position: center;background-size: cover;padding-right:125px;">
+            <h1>What drives me</h1>
+            <h3><span class="w3-text-pink">Problem Solving</span></h3>
+            <h4>- You've probably noticed this one a few times on this site already!</h4>
+            <h4>- I've repeated it for a good reason - solving problems is my biggest draw to this line of work.</h4>
+            <h3><span class="w3-text-pink">Learning</span></h3>
+            <h4>- Learning new languages/frameworks/technologies quickly is something I pride myself on. Its also something I look for in a role.</h4>
+            <h4>- Personal growth is important to me in the positions I take. I am motivated by learning things I didn't know before</h4>
+            <h3><span class="w3-text-pink">Teaching others</span></h3>
+            <h4>- On my teams, I'm typically the "nobody knows how this works, go try to figure it out" guy</h4>
+            <h4>- I also love to pass along what I've learned to others, I have a knack for explaining things in a way people will understand (especially non-technical folks!)</h4>
           </div>
         </div>
       </div>
@@ -134,23 +147,28 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h4>- As a fast learner, I like to put my skills to the test picking up new languages and technologies.</h4>
             <h3><span class="w3-text-pink">A team</span> that works cohesively</h3>
             <h4>- I thrive in a team environment that prioritizes growth and transparent communication.</h4>
-            <h3><span class="w3-text-pink">A company</span> that ??</h3>
-            <h4>- A good work-life balance is extremely important</h4>
-            <h4>- The best motivation is a company that values their employees</h4>
+            <h3><span class="w3-text-pink">A culture</span> that fosters growth</h3>
+            <h4>- I am motivated by workplaces that recognize and reward hard work, while emphasizing personal development</h4>
             <h3><span class="w3-text-pink">A product</span> that is constantly improving</h3>
-            <h4>- I seek out products that allow me to be a part of building something new</h4>
+            <h4>- I am drawn to products that allow me to be a part of building something new</h4>
             <h4>- New feature implementation being one of my strongest skill sets</h4>
           </div>
         </div>
         <div class="about-dynamic-card-back">
           <div class="left-image" style="background-image: url('/media/northern-lights.jpg');background-position: center;background-size: cover;">
           </div>
-          <div class="right-text" style="background-position: center;background-size: cover;padding: 200px 0">
-            <h1>Maried and Dogs</h1>
-            <h3>Got wife and dogs</h3>
-            <h3>balh blhal bhalsdjfeifjaiojapiovjaije efjeiadj vidjf eiaj vidjfeaf feafvvaefefaeffv</h3>
-            <h3>asdf vjdf eijaf vija ifje fkajlfl vjifjeoajlijeif q fjdfiajefjdfj adijdij</h3>
-            <h3>fdufiedjv iwjef dfjcvijdf wjfjd ejf ief jd dfije fwiejf vjv vjdiwejfpq jdfjd fv</h3>
+          <div class="right-text" style="background-position: center;background-size: cover;">
+            <h1>Where I want to be</h1>
+            <h3><span clas="w3-text-pink">Future roles</span></h3>
+            <h4>- I'm looking for a role that helps me grow my current skill sets</h4>
+            <h4>- In the not-too-distantant-future, I aim to be in a leadership position on an engineering team</h4>
+            <h3><span class="w3-text-pink">Languages & Technologies</span></h3>
+            <h4>- I plan to sharpen my skills with languages I've used more sparingly, such as Python and Go</h4>
+            <h4>- I am in the process of honing my Bash & Linux skills (hosting this site for example!)</h4>
+            <h4>- I'd love to get more practical networking experience</h4>
+            <h3><span class="w3-text-pink">Companies and teams</span></h3>
+            <h4>- Work with people who love what they do at a company that wants to build something new</h4>
+            <h4>- I always aim to surround myself with awesome people working on an awesome product!</h4>
           </div>
         </div>
       </div>
@@ -164,27 +182,34 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="right-text" style="background-position: center;background-size: cover;">
             <h1>What are you looking for?</h1>
             <h3><span class="w3-text-pink">An employee</span> that is motivated</h3>
-            <h4>- Somethign here something here somethign here</h4>
-            <h3><span class="w3-text-pink">A team member</span> that collaborates with others</h3>
-            <h4>- Good communication blah blah blah</h4>
-            <h3><span class="w3-text-pink">A developer</span> who isn't afraid to be wrong</h3>
-            <h4>- Sometimes the first step in innovation is finding out what <b>doesn't</b> work</h4>
-            <h4>- Learning and growing are never comfortable processes</h4>
-            <h3><span class="w3-text-pink">A professional</span> who is eager to contribute to something awesome</h3>
-            <h4>- </h4>
+            <h4>- You're looking for somebody who will go the extra mile to contribute positively to a great product</h4>
+            <h3><span class="w3-text-pink">A team member</span> who can collorate with others</h3>
+            <h4>- You want someone who excels at transparent communication and has experience in a collaborative environment</h4>
+            <h3><span class="w3-text-pink">A developer</span> who thinks outside of the box</h3>
+            <h4>- You're looking for a developer that can innovate; Someone who isn't afraid to be wrong</h4>
+            <h3><span class="w3-text-pink">An expert</span> who is eager to contribute to something awesome</h3>
+            <h4>- You have a great product that you want to see reach its full potential, and you're looking for someone who shares that sentiment</h4>
             <h2 class="w3-text-pink">Do I fit the bill?</h2>
             <a class="medium-text" href="/contact">Contact me today</a>
           </div>
         </div>
         <div class="about-dynamic-card-back">
-          <div class="right-image" style="background-image: url('/media/music.jpg');background-position: center;background-size: cover;">
+          <div class="right-image" style="background-image: url('/media/northern-lights.jpg');background-position: center;background-size: cover;">
           </div>
-          <div class="left-text" style="background-position: center;background-size: cover;padding: 200px 0">
-            <h1>Hobbies</h1>
-            <h3>- Music is a large part of my life</h3>
-            <h3>- Piano, guitar</h3>
-            <h3>- Self hosting</h3>
-            <h3>- </h3>
+          <div class="left-text">
+            <h1>What I like to do</h1>
+            <h3><span class="w3-text-pink">Music</span></h3>
+            <h4>- Music has always been a big part of my life, and it takes many forms in my hobbies, from playing it on guitar & piano
+              to listening to it through enthusiast grade equipment.
+            </h4>
+            <h3><span class="w3-text-pink">Travel</span></h3>
+            <h4>- Me & my family love seeing crazy new places and sharing in unique experiences. We make a point to have 1 big trip a year to somewhere new</h4>
+            <h4>- For example, I was able to snap the picture on the right of the northern lights in Akureyri, Iceland in September of 2023!</h4>
+            <h3><span class="w3-text-pink">Self Hosting</span></h3>
+            <h4>- This very site is currently being hosted in a docker container on my home server!</h4>
+            <h4>- Starting out just as a way to learn Linux a bit better, I've ended up hosting a lot of my own services!</h4>
+            <h4>- Some of these include media servers for photos, vidoes, and music, as well as password management tools.</h4>
+            <a class="medium-text" href="/about-site">Check out the About This Site page for more info on how I'm hosting this site!</a>
           </div>
         </div>
       </div>
